* CSS Styling * Favicon update * New API Key

--- a/src/components/TheWeather.astro
+++ b/src/components/TheWeather.astro
@@ -5,17 +5,19 @@
 <!-- Weather -->
 <section class="weather">
         
-      <h1>Weather</h1>
+      <!-- <h1>Weather</h1> -->
+      <img src="https://assets.codepen.io/16425/image-placeholder.png?width=200&height=200&format=auto" class="icon" />
       <data value="" class="city">A City</data>
       <data value="" class="temp">A Temp</data>
-      <img src="https://assets.codepen.io/16425/image-placeholder.png?width=200&height=200&format=auto" class="icon" />
+      
     
 </section>
 
 <script lang="js">
 
 // YOUR API KEY HERE
-const APIKEY ='7f294e5981e12ab1a8b95c48d43d2ae4';
+// const APIKEY ='7f294e5981e12ab1a8b95c48d43d2ae4';
+const APIKEY ='96893b9b7ca986d79d079173e6ab0a8f';
 
 // Units for Farenheit
 const units = 'imperial';
