--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,53 @@
+/* FontShare */
+@import url('https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&display=swap');
+
 /* Grid */
 .layout {
-  /* Set your own grid   */
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 400px;
-  grid-column-gap: 1em;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
+  row-gap: 1rem;
 }
+
 
 /* Widgets */
 section {
-  background: rgba(211, 211, 211, 0.5);
-  padding: 1em;
-  
   /* Relative Parent. Absolute Child */
   position: relative;
 }
 
+.top-container {
+  padding: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 0.5rem;
+  width: 80%;
+  margin: 1rem auto 0 auto;
+  
+  background: rgba(240, 227, 227, 0.048);
+  backdrop-filter: blur(30px);
+  border-radius: 10rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0px 32px rgba(255, 255, 255, 0.2);
+}
+
+.datetime-container {
+   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.25rem;
+  margin-left: 2rem;
+}
+
 /* Time */
 .time {
+ font-family: 'Clash Display', sans-serif;
+ font-weight: 600;
+ font-size: 3rem;
+ color: white;
+     
 }
 
 .hours {
@@ -27,6 +57,7 @@ section {
 }
 
 .seconds {
+  display: none;
 }
 
 .amOrPM {
@@ -35,9 +66,17 @@ section {
 
 /* Date */
 .date {
-  
+  font-family: 'Clash Display', sans-serif;
+ font-weight: 400;
+ font-size: 1.5rem;
+  color: white;
+
+  margin: 0;
 }
 
+.dayOfWeek {
+
+}
 .month {
 }
 
@@ -47,25 +86,51 @@ section {
 .year {
 }
 
-.dayOfWeek {
-}
 
 /* Weather */
 .weather {
+   display: flex;
+  flex-direction: column; 
+  align-self: center;
+  align-items: center;
+  /* gap: 0.5rem;   */
+
+  padding-right: 3rem;
   
 }
 
 .city {
+  font-family: 'Clash Display', sans-serif;
+ font-weight: 400;
+ font-size: 1.5rem;
+  color: white;
   
 }
 
 .temp {
-  
+  font-family: 'Clash Display', sans-serif;
+ font-weight: 400;
+ font-size: 1.5rem;
+  color: white;
 }
 
 .weather img {
+  width: 80px;
+  height: auto;
+  display: block;
   
 }
+
+.dailyComments {
+  font-family: 'Clash Display', sans-serif;
+ font-weight: 400;
+ font-size: 2.5rem;
+  color: white;
+  text-align: center;
+  margin-top: 0;
+
+}
+
 
 /* Smart Mirror */
 video { 
